--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,7 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "lint-staged",
-    "pre-add": "lint-staged",
-    "pre-push": "lint-staged"
+    "pre-commit": "lint-staged"
   }
 }
