--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint ."
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color"
   },
   "browserslist": {
     "production": [
