--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
   "hooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "commitlint -E $HUSKY_GIT_PARAMS"
+    "commit-msg": "commitlint --config .commitlintrc.js -E HUSKY_GIT_PARAMS"
   }
 }
